--- a/webapp/package.json
+++ b/webapp/package.json
@@ -18,7 +18,7 @@
         "uglify-js-brunch": ">= 1.0 < 1.8",
         "clean-css-brunch": ">= 1.0 < 1.8",
         "handlebars-brunch": "1.10.1",
-        "coffeescript-brunch": ">= 1.0 < 1.8",
+        "coffee-script-brunch": ">= 1.0 < 1.8",
         "sass-brunch": "1.7.0"
     }
 }
